# es-dumper

./: Cargo.toml  README.md  config.toml
backups/books/: books_data.json  books_mapping.json
backups/classic_movies/: classic_movies_data.json  classic_movies_mapping.json
backups/coffee_sales/: coffee_sales_data.json  coffee_sales_mapping.json
backups/consultations/: consultations_data.json  consultations_mapping.json
backups/domains_lookup/: domains_lookup_mapping.json
backups/filtered_detector-2025-03-30/: filtered_detector-2025-03-30_mapping.json
backups/log_pps_log-mitigator3-2025.01.19/: log_pps_log-mitigator3-2025.01.19_mapping.json
backups/mitigator_lookup_log-2025-04-06/: mitigator_lookup_log-2025-04-06_data.json  mitigator_lookup_log-2025-04-06_mapping.json
backups/mitigator_lookup_log-2025-04-13/: mitigator_lookup_log-2025-04-13_data.json  mitigator_lookup_log-2025-04-13_mapping.json
backups/mitigator_lookup_log-2025-04-20/: mitigator_lookup_log-2025-04-20_data.json  mitigator_lookup_log-2025-04-20_mapping.json
backups/mitigator_lookup_log-2025-04-27/: mitigator_lookup_log-2025-04-27_data.json  mitigator_lookup_log-2025-04-27_mapping.json
backups/mitigator_lookup_log-2025-05-04/: mitigator_lookup_log-2025-05-04_data.json  mitigator_lookup_log-2025-05-04_mapping.json
backups/mitigator_lookup_log-2025-05-11/: mitigator_lookup_log-2025-05-11_mapping.json
backups/movies/: movies_data.json  movies_mapping.json
backups/movies_reviews/: movies_reviews_data.json  (+1 more)
src/: backup.rs  config.rs  http_client.rs  main.rs  restore.rs  utils.rs
(+8 files in other folders)
