[package]
name = "dump-dump"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
rayon = "1.10.0"
reqwest = { version = "0.11", features = ["blocking", "json", "default-tls"] }
serde_json = "1.0.140"
base64 = "0.21.7"
toml = "0.8.8"
serde = { version = "1.0.197", features = ["derive"] }
indicatif = "0.17"

[features]
default = []
compression = []
