[package]
name = "dump-dump"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.8"
rayon = "1.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
base64 = "0.22"

[features]
default = []
compression = []
